Fix positioning on mobile

--- a/themes/andy/css/main.css
+++ b/themes/andy/css/main.css
@@ -112,12 +112,12 @@ main > nav {
   }
 
   main {
-    grid-column: 2 / span 11;
+    grid-column: 2 / span 10;
     grid-row: 2;
   }
 
   #side {
-    grid-column: 2 / span 11;
+    grid-column: 2 / span 10;
     grid-row: 3;
   }
 
